--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "preview": "nuxt preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.3",
     "nuxt": "^3.15.4",
+    "tailwindcss": "^4.0.3",
     "vue": "latest",
     "vue-router": "latest"
   }
