--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
     "nuxt": "^3.15.4",
+    "nuxt-icons": "^3.2.1",
     "tailwindcss": "^4.0.3",
     "vue": "latest",
     "vue-router": "latest"
