--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.9.0",
     "@tailwindcss/vite": "^4.0.3",
     "nuxt": "^3.15.4",
     "nuxt-icons": "^3.2.1",
+    "pinia": "^2.3.1",
     "tailwindcss": "^4.0.3",
     "vue": "latest",
     "vue-router": "latest"
