--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.9.0",
     "@tailwindcss/vite": "^4.0.3",
+    "dayjs": "^1.11.13",
     "nuxt": "^3.15.4",
     "nuxt-icons": "^3.2.1",
     "pinia": "^2.3.1",
