--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 NUXT_TMDB_API_KEY=[string]
 NUXT_TMDB_API_TOKEN=[string]
-NUXT_TMDB_SERVICE_URL=[string]
+NUXT_TMDB_SERVICE_URL=https://api.themoviedb.org/3
